# rabbitmq-messages-management

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docs.yml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.js
client/src/components/: MessagePublisher.js  Queue.js  Queues.js  Vhosts.js
client/src/components/fragments/: RabbitAppBar.js  ReusableAccordion.js  ReusableAlertComponent.js  ReusableModal.js
client/src/components/message-viewers/: Base64EncodedMessageViewer.js  JsonMessageViewer.js  MessageViewer.js  StringMessageViewer.js
client/src/utilities/: messages.js
dependencies/: docker-compose.yml
src/: constants.rs  lib.rs  main.rs
src/exceptions/: mod.rs
src/rabbitmq/: exchanges.rs  mod.rs  queues.rs  vhosts.rs
src/routes/: exchanges.rs  mod.rs  queues.rs  vhosts.rs
tests/: queues.rs
