[package]
name = "rabbitmq-messages-management"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
isahc = "1.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
base64 = "0.22.1"
clippy = "0.0.302"
rocket = { version = "0.5.1", features = ["json"] }
log = "0.4"
